--- a/ReadingDiary/appsettings.Development.json
+++ b/ReadingDiary/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ReadingDiary": "Server=localhost\\SQLEXPRESS;Database=ReadingDiary;User Id=readingdiarylocal;Password=localtestuser;"
+  }
 }
