--- a/ReadingDiary/appsettings.json
+++ b/ReadingDiary/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
@@ -22,5 +22,18 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ReadingDiary": "{PIPELINE_VARIABLE}"
+  },
+  "credentials": {
+    "tenantName": "piggycorp.ommicrosoft.com",
+    "clientID": "3cc26de4-fe80-4529-93f4-bacedb3bf03e"
+  },
+  "policies": {
+    "policyName": "B2C_1_ReadingDiarySignUpSignIn"
+  },
+  "protectedRoutes": {
+    "hello": {
+      "endpoint": "/diary",
+      "scopes": [ "reading-diary.read", "reading-diary.write" ]
+    }
   }
 }
