Add basic authentication

--- a/ReadingDiary/appsettings.json
+++ b/ReadingDiary/appsettings.json
@@ -1,17 +1,12 @@
 {
-  /*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform
-*/
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-
-    "Scopes": "access_as_user",
-    "CallbackPath": "/signin-oidc"
+  "AzureAdB2C": {
+    "Instance": "https://piggycorp.b2clogin.com/",
+    "Domain": "piggycorp.onmicrosoft.com",
+    "TenantId": "5b263e3a-7d6a-48c9-875b-a46814ca905a",
+    "ClientId": "3cc26de4-fe80-4529-93f4-bacedb3bf03e",
+    "Scopes": [ "reading-diary.read", "reading-diary.write" ],
+    "SignUpSignInPolicyId": "B2C_1_ReadingDiarySignUpSignIn"
+    //"CallbackPath": "/signin/B2C_1_sign_up_in"  // defaults to /signin-oidc
   },
   "Logging": {
     "LogLevel": {
@@ -22,18 +17,5 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ReadingDiary": "{PIPELINE_VARIABLE}"
-  },
-  "credentials": {
-    "tenantName": "piggycorp.ommicrosoft.com",
-    "clientID": "3cc26de4-fe80-4529-93f4-bacedb3bf03e"
-  },
-  "policies": {
-    "policyName": "B2C_1_ReadingDiarySignUpSignIn"
-  },
-  "protectedRoutes": {
-    "hello": {
-      "endpoint": "/diary",
-      "scopes": [ "reading-diary.read", "reading-diary.write" ]
-    }
   }
 }
