Implement adding and updating entries

--- a/ReadingDiary/appsettings.Development.json
+++ b/ReadingDiary/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReadingDiary": "Server=localhost\\SQLEXPRESS;Database=ReadingDiary;User Id=readingdiarylocal;Password=localtestuser;TrustServerCertificate=True"
+    "ReadingDiary": "Server=localhost\\;Database=ReadingDiary;User Id=readingdiarylocal;Password=localtestuser;TrustServerCertificate=True"
   }
 }
