Add production settings

--- a/ReadingDiary/appsettings.production.json
+++ b/ReadingDiary/appsettings.production.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": ""
+  "AllowedHosts": "",
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "Authority": "https://dev-ydcxmmfaiie0fgyg.us.auth0.com/",
+        "ValidAudiences": [ "https://readingdiaryapi.azurewebsites.net/" ],
+        "ValidIssuer": "dev-ydcxmmfaiie0fgyg.us.auth0.com/"
+      }
+    }
+  }
 }
