Add production settings

--- a/ReadingDiary/appsettings.production.json
+++ b/ReadingDiary/appsettings.production.json
@@ -9,9 +9,9 @@
   "Authentication": {
     "Schemes": {
       "Bearer": {
-        "Authority": "https://dev-ydcxmmfaiie0fgyg.us.auth0.com/",
+        "Authority": "https://reading-diary.eu.auth0.com/",
         "ValidAudiences": [ "https://readingdiaryapi.azurewebsites.net/" ],
-        "ValidIssuer": "dev-ydcxmmfaiie0fgyg.us.auth0.com/"
+        "ValidIssuer": "reading-diary.eu.auth0.com/"
       }
     }
   }
